WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124148
REGRESSION(
r158976
): Web Inspector: unable to start docked or dock
https://bugs.webkit.org/show_bug.cgi?id=124148
Summary
REGRESSION(r158976): Web Inspector: unable to start docked or dock
Gustavo Noronha (kov)
Reported
2013-11-11 08:07:44 PST
With the change in
r158976
, the canAttach method takes into account the level of inspector that is being started, to avoid starting an inspector instance that is inspecting an inspector on the same window. The first level of inspectors is 1, but canAttach checks for m_level > 0, so we are never able to attach.
Attachments
Patch
(1.46 KB, patch)
2013-11-11 08:10 PST
,
Gustavo Noronha (kov)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-11-11 08:08:05 PST
<
rdar://problem/15437083
>
Gustavo Noronha (kov)
Comment 2
2013-11-11 08:10:08 PST
Created
attachment 216572
[details]
Patch
Alexandru Chiculita
Comment 3
2013-11-11 10:03:30 PST
***
Bug 124155
has been marked as a duplicate of this bug. ***
Alexandru Chiculita
Comment 4
2013-11-11 10:05:13 PST
Sorry about that. Having the level set to 1 was a last minute change that I've done when the debug build asserted in the HashMap.
WebKit Commit Bot
Comment 5
2013-11-11 17:53:32 PST
Comment on
attachment 216572
[details]
Patch Clearing flags on attachment: 216572 Committed
r159090
: <
http://trac.webkit.org/changeset/159090
>
WebKit Commit Bot
Comment 6
2013-11-11 17:53:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug