REGRESSION(r158976): Web Inspector: unable to start docked or dock https://bugs.webkit.org/show_bug.cgi?id=124148

Reviewed by Timothy Hatcher.

* UIProcess/WebInspectorProxy.cpp:
(WebKit::WebInspectorProxy::canAttach): check for a level that is greater than 1 rather than 0
to deny attachment, since 1 is the first level of inspectors.


Canonical link: https://commits.webkit.org/142376@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159090 268f45cc-cd09-0410-ab3c-d52691b4dbfc